--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -43,7 +43,30 @@ a > span:hover {
 .user__avatar {
     font-size: 2rem;
 }
+.genreLabel{
+    cursor: pointer;
+    color: white;
+    font-size: 1.1rem;
+    margin-right: 10px;
+}
+.genreDropdown {
+  position: absolute;
+  top: 60px;
+  background: #111;
+  padding: 10px;
+  border-radius: 8px;
+  z-index: 1000;
+}
 
+.genreOption {
+  padding: 6px 12px;
+  cursor: pointer;
+  color: white;
+}
+
+.genreOption:hover {
+  background: #333;
+}
 
 @media (max-width: 768px) {
     .header {
