--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,7 +6,15 @@
     justify-content: space-between;
     gap: 20px;
 }
-
+.logo {
+    font-size: 3rem;
+    font-weight: bold;
+    color: red;
+    font-family: cursive;
+    text-decoration: none;
+    cursor: pointer;
+            
+}
 .headerLeft, .headerRight {
     display: flex;
     align-items: center;
